<resources>
    <string name="app_name">Boxes</string>

    <string name="text_main_day">Are you enjoying your chastity?</string>
    <string name="text_main_day_end">Did you enjoy your chastity?</string>
    <string name="text_main_since">You have been locked since</string>
    <string name="text_main_since_end">You were locked up at</string>
    <string name="text_main_start">07:22:49 on\n27 January 2020</string>
    <string name="text_main_start_on">" on\n"</string>

    <string name="text_main_open_first_in">You may open\nthe first box in…</string>
    <string name="text_main_open_first_now">You may open\nthe first box now</string>
    <string name="text_main_open_in">You may open\nthe next box in…</string>
    <string name="text_main_open_now">You may open\nthe next box now</string>
    <string name="text_main_restart">You should edge\nand start again</string>
    <string name="text_main_infinity">You\'re back at\nthe start again</string>

    <string name="button_main_open_in">15:49:17</string>
    <string name="button_main_open_now">o p e n</string>
    <string name="button_main_open_restart">r e- s t a r t</string>
    <string name="button_main_open_infinity">continue</string>


    <string name="text_showinstructions_greet">Welcome to Mystery Box game!</string>
    <string name="text_showinstructions_explain">I wrote down numbers and put one\nin each of 7 boxes. (There are two\n1s, two 2s, two 3s and a 4) Your key\nis in another box. After a day you\nmay open your first box. If it contains\na number you will wait that many\ndays before opening the next box.\nGood luck.</string>

    <string name="text_newgame_thought">Hmmm, you\'re not locked.\nYou should prepare and\nstart a new game.</string>
    <string name="checkbox_newgame_locked">i\'m locked and ready</string>
    <string name="button_newgame_start">s t a r t</string>

    <string name="text_openbox_thought">OK, let\'s open the next box…</string>
    <string name="text_openbox_result_key">It contains a… key, yay!</string>
    <string name="text_openbox_result_infinity">It is an Infinity Box! Too bad.</string>
    <string name="text_openbox_result_prefix">It contains a… </string>
    <string name="text_openbox_result_postfix">, haha</string>
    <string name="button_openbox_continue">continue</string>

    <string name="menu_settings">Settings</string>

    <string name="text_settings_Q1">3x</string>
    <string name="text_settings_Q2">3x</string>
    <string name="text_settings_Q3">2x</string>
    <string name="text_settings_Q4">2x</string>
    <string name="text_settings_Q5">1x</string>
    <string name="text_settings_Q6">1x</string>
    <string name="text_settings_Q7">1x</string>
    <string name="text_settings_Q8">1x</string>
    <string name="text_settings_Q9">1x</string>
    <string name="text_settings_Q_symbol">x</string>

    <string name="text_settings_num">Number of boxes</string>
    <string name="text_settings_num_boxes">15</string>
    <string name="text_settings_remove">Remove\nBoxes</string>
    <string name="text_settings_add">Add\nBoxes</string>

    <string name="text_settings_inspire">Come on, push yourself.\nDo it for Natalie.</string>



    <string name="text_settings_timestep_title">Time between boxes</string>

    <string name="text_settings_time_unit_day">\u0020day</string>
    <string name="text_settings_time_unit_days">\u0020days</string>
    <string name="text_settings_time_unit_hour">\u0020hr</string>
    <string name="text_settings_time_unit_hours">\u0020hrs</string>
    <string name="text_settings_time_unit_minutes">\u0020mins</string>

    <string name="text_time_units">Measure time in</string>
    <string-array name="time_units_array">
        <item>Days</item>
        <item>Hours</item>
        <item>Minutes</item>
    </string-array>





</resources>